--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="index.css" />
-    <title>Ajax Sandbox</title>
+    <title>Popular Movies</title>
   </head>
   <body>
     <div class="container my-4">
